remplace toList par collect